Migrate backend from Google Sheets to PostgreSQL (Neon) with spring-dotenv, JPA models, data migration runner, and auth session improvements
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>